--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "standard": "^12.0.1"
+  },
+  "dependencies": {
+    "accessible-autocomplete": "^2.0.2"
   }
 }
