--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "standardx": "^7.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-gds": "^0.1.0"
+    "standard": "^12.0.1"
+  },
+  "dependencies": {
+    "accessible-autocomplete": "^2.0.2"
   }
 }
