Update Heroku review app.json buildpacks
Heroku needs a nodejs buildpack before ruby to install
the dependency.

The shorthand names for officially supported buildpacks can also be used as a URL.

--- a/app.json
+++ b/app.json
@@ -40,7 +40,10 @@
   "image": "heroku/ruby",
   "buildpacks": [
     {
-      "url": "https://github.com/heroku/heroku-buildpack-ruby"
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "heroku/ruby"
     }
   ],
   "addons": []
