Fix misspelling in T001

--- a/lib/brexit_checker/actions.yaml
+++ b/lib/brexit_checker/actions.yaml
@@ -495,7 +495,7 @@ actions:
     to sell your CE marked goods in the UK or EU
   consequence: In most cases you can continue using the CE marking in the EU and UK
     (although in some cases you may need to transfer your certificate of conformity
-    to an EU conformity asssesment body) - but if your good requires UKCA marking
+    to an EU conformity assessment body) - but if your good requires UKCA marking
     and you have not used it, then it will not be valid for sale in the UK.
   guidance_prompt: More information
   guidance_link_text: Prepare to use the UKCA mark after Brexit
